New Jpeg for apple-cinnamon;renamed pepperoni

--- a/recipes/apple-oatmeal.html
+++ b/recipes/apple-oatmeal.html
@@ -6,6 +6,27 @@
 </head>
 <body>
 <h1><u>Apple Cinnamon Oatmeal</u></h1>
+<img src="images/apple-cinnamon.jpeg" alt src="Apple Cinnamon Oatmeal">
 <p>Welcome I can see you have a "good taste" in oatmeal,</p>
 <p>apple cinnamon oatmeal adds a nice. savory taste to something that alot of people considered boring</p>
+<p>Lets get started</p>
+<h3><em><strong><u>Ingriedients</u></strong></em></h3>
+<ul>
+    <li>1 Cup of Water</li>
+    <li>1/4 Cup Apple Juice</li>
+    <l1>1 Apple, cored and chopped</l1>
+    <li>2/3 Cup rolled oats</li>
+    <li>1 Teaspoon ground cinnamon</li>
+    <li>1 Cup of Milk</li>
+</ul>
+<p>Now that we have accumulated all the neccessary ingriedients,lets get cooking!</p>
+<h3><em><strong><u>Steps</u></strong></em></h3>
+<ol>
+    <li>Pour the water,apple juice, and apples in a saucepan.</li>
+    <li>Bring to a boil over high heat.</li>
+    <li>Once at boil lower heat and stir in the rolled oats and cinnamon.</li>
+    <li>Return to a boil,then lower heat to low, and simmer until thick, about 3 minutes.</li>
+    <li>Spoon into serving bowls, and pour milk over the servings,and enjoy!</li>
+    </ol>
 
+    Thanks for Reading!
