--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,12 +1,12 @@
-<!Doctype Html/>
+<!Doctype html>
 <html lang="en">
 <head>
  <meta charset="utf-8">
  <title>Pepperoni Pizza</title>
-<head/>
+</head>
 <body>
  <h1>Pepperoni Pizza</h1>
- <img src="images/image.jpeg" alt src="Baked Pepperoni Pizza Spread"/>
+ <img src="images/pepperoni-pizza.jpeg" alt src="Baked Pepperoni Pizza Spread"/>
  <p>Behold an amazing pizza that is not high in calories,</p> 
  <p>that will surely bring a smile to your face and keep your cash in your pocket</p>
  <p>follow along with the directions and ingriedients and prepare yourself for a savory meal!</p>
