--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-  <a href="recipes/pizza.html">Pepperoni Pizza</a>
-  <p>Within this website, you will find that one recipe that will make you're visitors jealous of your cooking prowess!</p>
-  <p>If you cannot find that exact recipe you can also reference <a href="http://www.google.com">google</a> .
-
-    <p>Below you will find what is neccessary to make the most delicious pepperoni pizza ever!</p>
+   <p>Within this website, you will find that one recipe that will make you're visitors jealous of your cooking prowess!</p>
+   <p>If you cannot find that exact recipe you can also reference <a href="http://www.google.com">google</a> .
+   <p>Below you will find what is neccessary to make the most delicious pepperoni pizza ever!</p>
+   <ul>
+    <li><a href="recipes/pizza.html">Pepperoni Pizza</a></li>
+    <li><a href="recipes/apple-oatmeal.html">Apple Cinnamon Oatmeal</a></li>
+    </ul>
     
