--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
    <ul>
     <li><a href="recipes/pizza.html">Pepperoni Pizza</a></li>
     <li><a href="recipes/apple-oatmeal.html">Apple Cinnamon Oatmeal</a></li>
+    <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
     </ul>
     
