--- a/index.html
+++ b/index.html
@@ -14,4 +14,5 @@
     <li><a href="recipes/apple-oatmeal.html">Apple Cinnamon Oatmeal</a></li>
     <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
     </ul>
+    </html>
     
