--- a/index.html
+++ b/index.html
@@ -3,16 +3,23 @@
 <head>
   <meta charset="utf-8">
   <title>Yummy Recipes!</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Odin Recipes</h1>
+   <h1><strong><u>Odin Recipes</u></strong></h1>
    <p>Within this website, you will find that one recipe that will make you're visitors jealous of your cooking prowess!</p>
    <p>If you cannot find that exact recipe you can also reference <a href="http://www.google.com">google</a> .
-   <p>Below you will find what is neccessary to make the most delicious pepperoni pizza ever!</p>
+   <p>Below you will find what is neccessary to make the most delicious!</p>
+   <div>
+    <h2><u>Take Your pick for Dinner!</u></h2>
+    <p>You are on the right road for a good time tonight</p>
+    <p>Check out tonights Menu</p>
+   </div>
    <ul>
     <li><a href="recipes/pizza.html">Pepperoni Pizza</a></li>
     <li><a href="recipes/apple-oatmeal.html">Apple Cinnamon Oatmeal</a></li>
     <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
     </ul>
+
     </html>
-    
+   
