css file; added return to index.html to recipes

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -26,7 +26,9 @@
     <li>Spread into 9-inch pie plate</li>
     <li>Bake 25 to 30 minutes or until top is puffed and lightly browned. Serve warm with crackers.</li>
 </ol>
-
+</body>
+<a href="../index.html">Return to main page</a>
+</html>
 
 
 
