--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -36,4 +36,5 @@
    </ol>
     <p>If you fancy bread add any type of bread to the mix and viola; gourmet eating at it finest.</p>
     <p>Thanks for Reading!</p>
+    <a href="../index.html">Return to main page</a>
 </html>
