--- a/recipes/apple-oatmeal.html
+++ b/recipes/apple-oatmeal.html
@@ -27,6 +27,9 @@
     <li>Once at boil lower heat and stir in the rolled oats and cinnamon.</li>
     <li>Return to a boil,then lower heat to low, and simmer until thick, about 3 minutes.</li>
     <li>Spoon into serving bowls, and pour milk over the servings,and enjoy!</li>
-    </ol>
-
-    Thanks for Reading!
+</ol>
+<p>Thanks for reading</p>
+</body>
+<a href="../index.html">Return to main page</a>
+</html>
+    
