added css to subsequent pages/buttons

--- a/recipes/apple-oatmeal.html
+++ b/recipes/apple-oatmeal.html
@@ -3,6 +3,7 @@
 <head>
  <meta charset="utf-8">
  <title>Apple Cinnamon Oatmeal</title>
+ <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 <h1><u>Apple Cinnamon Oatmeal</u></h1>
@@ -30,6 +31,8 @@
 </ol>
 <p>Thanks for reading</p>
 </body>
+<button>
 <a href="../index.html">Return to main page</a>
+</button>
 </html>
     
