--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,6 +3,7 @@
 <head>
  <meta charset="utf-8">
  <title>Pepperoni Pizza</title>
+ <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
  <h1>Pepperoni Pizza</h1>
@@ -27,7 +28,9 @@
     <li>Bake 25 to 30 minutes or until top is puffed and lightly browned. Serve warm with crackers.</li>
 </ol>
 </body>
+<button>
 <a href="../index.html">Return to main page</a>
+</button>
 </html>
 
 
