--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Spaghetti</title>
+  <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
    <h1>Spaghetti,Get Ready!</h1>
@@ -36,5 +37,7 @@
    </ol>
     <p>If you fancy bread add any type of bread to the mix and viola; gourmet eating at it finest.</p>
     <p>Thanks for Reading!</p>
+  <button>
     <a href="../index.html">Return to main page</a>
+    </button>
 </html>
